# lecture

./: .gitignore  Makefile  Makefile.am  Makefile.in  README  autogen.sh  configure  configure.ac
c/: helloworld.c
c++/: bitfield.cpp  encapsulation.cpp  goto.cpp  helloworld.cpp  inheritance.cpp  operators.cpp  pass.cpp  pointer.cpp  union.cpp
c++/lecture1/: bitfield.cpp  enum.cpp  factorial.cpp  helloworld.cpp  inheritance.cpp  object.cpp  pass.cpp  pointer.cpp
c++/lecture2/: list.cpp  map.cpp  shared_ptr.cpp  thread.cpp  twitter.cpp  vector.cpp
c/lecture1/: c99loop.c  enum.c
mysql/: employee.sql
